--- a/.github/workflows/scala-sbt.yml
+++ b/.github/workflows/scala-sbt.yml
@@ -16,9 +16,11 @@ permissions:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
+    runs-on: ${{ matrix.OS }}
+    strategy:
+      matrix:
+        OS: ["ubuntu-latest", "macos-latest", "windows-latest"]
+      fail-fast: false
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
